admin - show list address

--- a/CoCo/views/admin/addresses/list-addresses-page.hbs
+++ b/CoCo/views/admin/addresses/list-addresses-page.hbs
@@ -64,7 +64,46 @@
             </div>
             </div>
         </div>
-        <div id="list-addresses-table" class="table-responsive" style="height: 360px; width: 80%; margin: auto;"></div>
+        <div id="list-addresses-table" class="table-responsive" style="height: 360px; width: 80%; margin: auto;">
+            <table>
+                <thead>
+                    <th class="th-style">STT</th>
+                    <th class="th-style">Tên địa điểm</th>
+                    <th class="th-style">Sức chứa</th>
+                    <th class="th-style">Số lượng hiện tại</th>
+                    <th class="th-style">Cách ly</th>
+                    <th class="th-style">Điều trị</th>
+                    <th class="th-style"></th>
+                </thead>
+                <tbody>
+                    {{#each addresses}}
+                        <tr>
+                            <td class="table-stt">{{stt}}</td>
+                            <td class="table-text">{{name}}</td>
+                            <td class="table-number">{{tankage}}</td>
+                            <td class="table-number">{{currentQuantity}}</td>
+                            {{#ifEquals type 0}}
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled></td>
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled></td>
+                            {{else ifEquals type 1}}
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled checked></td>
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled></td>
+                            {{else ifEquals type 2}}
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled></td>
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled checked></td>
+                            {{else}}
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled checked></td>
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled checked></td>
+                            {{/ifEquals}}
+                            <td class="table-button">
+                                <span class="fa-solid fa-pen"></span>
+                                <span class="fa-solid fa-trash-can"></span>
+                            </td>
+                        </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
         <div class="page-container">
             <button class="first-page" disabled>
                 <i class="fas fa-angle-double-left"></i>
@@ -86,6 +125,129 @@
 </div>
 
 <!-- JS -->
-<script src="js/add-list-addresses-table.js"></script>
-<script src="../js/pagination.js"></script>
+<script>
+    /*var listAddresses = [
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2},
+    {name:"Bệnh viện dã chiến số 1", tankage: 1000, currentQuantity: 50, type: 2}
+    ];*/
+
+    /* if(typeof(Storage) !== 'undefined'){
+        if (localStorage.length === 0 || localStorage.getItem("listAddresses") === null){
+            localStorage.setItem('listAddresses',JSON.stringify(listAddresses));
+            loadListAddressesTable();
+        } else {
+            listAddresses = JSON.parse(localStorage.getItem('listAddresses'));
+            loadListAddressesTable();
+        }
+    }
+    else 
+        loadListAddressesTable();*/
+
+    function createData(data, classData){
+        let a = document.createElement('td');
+        a.setAttribute("class", classData);
+        let textNode = document.createTextNode(data);
+        a.appendChild(textNode);
+        return a;
+    }
+
+    function createButton(){
+        let a = document.createElement('td');
+        let del = document.createElement('span');
+        let edit = document.createElement('span');
+        a.setAttribute("class", "table-button");
+        edit.setAttribute("class", "fa-solid fa-pen");
+        del.setAttribute("class", "fa-solid fa-trash-can")
+        a.appendChild(edit);
+        a.appendChild(del);
+        return a;
+    }
+
+    function createCheckbox(){
+        let a = document.createElement('td');
+        a.setAttribute("class","table-checkbox")
+        let checkBox = document.createElement('input');
+        checkBox.type="checkbox";
+        checkBox.disabled = true;
+        checkBox.setAttribute("class","custom-check-box");
+        checkBox.checked = false;
+        a.appendChild(checkBox);
+        return a;
+    }
+
+    function changeStatus(a, status){
+        status ? a.checked = true : a.checked = false;
+    }
+
+    function createDataBySTT(STT){
+        let a = document.createElement('td');
+        a.setAttribute("class", "table-stt");
+        let textNode = document.createTextNode(STT);
+        a.appendChild(textNode);
+        return a;
+    }
+
+    var listAddresses = "{addresses}"
+    var myTable = document.querySelector('#list-addresses-table');
+    var headers = ['STT', 'Tên địa điểm', 'Sức chứa', 'Số lượng hiện tại', 'Cách ly', 'Điều trị',''];
+    var table = document.createElement('table');
+    table.setAttribute("class", "custom-table table table-striped");
+    var theader = document.createElement('thead');
+    var headerRow = document.createElement('tr');
+    headers.forEach(header=>{
+        var th = document.createElement('th');
+        th.setAttribute("class", "th-style");
+        th.setAttribute("scope", "col");
+        var textNode = document.createTextNode(header);
+        th.appendChild(textNode);
+        headerRow.appendChild(th);
+    });
+    theader.appendChild(headerRow);
+    table.appendChild(theader);
+    var tbody = document.createElement('tbody');
+    var stt = 1;
+    listAddresses.forEach(address=>{
+        var dataRow = document.createElement('tr');
+        var STT = createDataBySTT(stt.toString());
+        var name = createData(address["name"], "table-text");
+        var tankage = createData(address["tankage"], "table-number");
+        var currentQuantity = createData(address["currentQuantity"], "table-number")
+        var isolation = createCheckbox(false);
+        var treatment = createCheckbox(false);
+        switch (address["type"]){
+            case 1:
+                changeStatus(isolation, true);
+                break;
+            case 2:
+                changeStatus(treatment, true);
+                break;
+            case 3:
+                changeStatus(isolation, true);
+                changeStatus(treatment, true);
+                break;
+            default:
+                break;
+        }
+        var button = createButton();
+        dataRow.appendChild(STT);
+        dataRow.appendChild(name);
+        dataRow.appendChild(tankage);
+        dataRow.appendChild(currentQuantity);
+        dataRow.appendChild(isolation);
+        dataRow.appendChild(treatment);
+        dataRow.appendChild(button);
+        tbody.appendChild(dataRow);
+        ++stt;
+    })
+    table.appendChild(tbody);
+    myTable.appendChild(table);
+</script>
 <!-- JS -->
