--- a/CoCo/views/related-people/cart.html
+++ b/CoCo/views/related-people/cart.html
@@ -113,7 +113,8 @@
                 </div>
                 <div id="total-cost">
                     <i class="fa-solid fa-sack-dollar fa-xl"></i>
-                    <div class="total-cost-text" style="color: #398ab9; margin-left: 5px;">Tổng cộng:&NonBreakingSpace;</div>
+                    <div class="total-cost-text" style="color: #398ab9; margin-left: 5px;">Tổng cộng:&NonBreakingSpace;
+                    </div>
                     <div class="total-cost-text" style="color: red;">925,000đ</div>
                 </div>
             </div>
@@ -127,7 +128,6 @@
                 </div>
             </div>
 
-        </div>
         </div>
 
         <footer></footer>
