--- a/CoCo/public/css/manager/products/product-style.css
+++ b/CoCo/public/css/manager/products/product-style.css
@@ -89,3 +89,9 @@
     border: none;
     background-color:var(--blue2);
 }
+.file-input{
+    background-color: transparent;
+    outline: none;
+    border: none;
+    color: var(--grey1);
+}
