--- a/CoCo/views/manager/products/product-list-page.hbs
+++ b/CoCo/views/manager/products/product-list-page.hbs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/manager/products/product-list-page.css" />
+<link rel="stylesheet" href="/css/manager/products/product-style.css" />
 <script src="/data/data.json"></script>
 
 <div class="content">
@@ -69,20 +70,20 @@
     </div>
     {{#each products}}
     <div class="product-cardview">
-      <img src="/images/manager/products/{{images.[0]}}" alt="product" />
+      <img src="{{images.[0]}}" alt="product" />
       <div class="product-cardview-box">
         <div class="product-cardview-info">
-          <a href="/">{{name}}</a>
+          <a href="products/{{stringId}}">{{name}}</a>
           <p>{{price}}000 VNĐ</p>
         </div>
-        <div class="product-cardview-action">
+        <a href="products/{{stringId}}/delete" class="product-cardview-action">
           <span class="fa-solid fa-trash-can fa-xl"></span>
-        </div>
+        </a>
       </div>
     </div>
     {{/each}}
   </div>
-  <a href="add-product-page.html">
+  <a href="products/new-product">
     <div class="button-add">
       <i class="fa-solid fa-plus fa-3x"></i>
     </div>
