update consumption-history.hbs for binding data

--- a/CoCo/views/related-people/consumption-history.hbs
+++ b/CoCo/views/related-people/consumption-history.hbs
@@ -59,7 +59,7 @@
               </tr>
             </thead>
             <tbody>
-                {{#each cHistory}}
+                {{#each consumption}}
               <tr>
                 <td>{{dateTime}}</td>
                 <td>{{packageName}}</td>
