--- a/CoCo/views/related-people/managed-history.hbs
+++ b/CoCo/views/related-people/managed-history.hbs
@@ -59,7 +59,7 @@
               </tr>
             </thead>
             <tbody>
-                {{#each managements}}
+                {{#each histories}}
               <tr>
                 <td>{{dateTime}}</td>
                 <td>{{updateType}}</td>
