--- a/CoCo/views/admin/addresses/address-detail-page.hbs
+++ b/CoCo/views/admin/addresses/address-detail-page.hbs
@@ -15,17 +15,18 @@
                     <div class="col-lg-8 col-md-7 col-sm-12">
                         <div class="main-content">
                             <h3 class="form-heading mb-3 p-2 ">Địa điểm cách ly, điều trị</h3>
+                            {{#with address}}
                             <form class="form-add-manager p-2">
                             <div class="form-group row">
                                 <label for="name" class="col-lg-5 col-sm-5 col-form-label">Tên địa điểm</label>
                                 <div class="col-lg-7 col-sm-7">
-                                    <input type="text" class="form-control" id="name"  disabled>
+                                    <input type="text" class="form-control" id="name"  value="{{name}}" disabled>
                                 </div> 
                             </div>
                             <div class="form-group row">
                                 <label for="number" class="col-lg-5 col-sm-5 col-form-label">Số thu dụng</label>
                                 <div class="col-lg-7 col-sm-7">
-                                <input type="text" class="form-control" id="number" disabled>
+                                <input type="text" class="form-control" id="number" value="{{number}}"disabled>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -54,6 +55,7 @@
                                 </div>
                             </div>
                             </form>  
+                            {{#with}}
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-5 col-sm-12 d-flex flex-column">
