--- a/CoCo/views/admin/addresses/list-addresses-page.hbs
+++ b/CoCo/views/admin/addresses/list-addresses-page.hbs
@@ -99,7 +99,7 @@
                                 <a href="/admin/address/{{_id}}/edit" style="color:#1C658C"><span class="fa-solid fa-pen"></span></a>
                                 <a href="/admin/address/{{_id}}/delete?_method=DELETE" style="color:#1C658C"
                                     onclick="return confirm('Are you sure you want to delete this record?')">
-                                    <span class="fa-solid fa-trash-can" name="_method" value="DELETE"></span>
+                                    <span class="fa-solid fa-trash-can"></span>
                                 </a>
                             </td>
                         </tr>
