--- a/CoCo/views/admin/managers/list-manager-history-page.hbs
+++ b/CoCo/views/admin/managers/list-manager-history-page.hbs
@@ -65,6 +65,47 @@
         </div>
     </div>
     <div id="list-manager-history-table" class="table-responsive" style="height: 360px; width: 80%; margin: auto;">
+        <table>
+                <thead>
+                    <th class="th-style">STT</th>
+                    <th class="th-style">Tên địa điểm</th>
+                    <th class="th-style">Sức chứa</th>
+                    <th class="th-style">Số lượng hiện tại</th>
+                    <th class="th-style">Cách ly</th>
+                    <th class="th-style">Điều trị</th>
+                    <th class="th-style"></th>
+                </thead>
+                <tbody>
+                    {{#each addresses}}
+                        <tr>
+                            <td class="table-stt"><a href="/admin/address/{{_id}}/show" style="color:black; text-decoration: none">{{stt}}</a></td>
+                            <td class="table-text"><a href="/admin/address/{{_id}}/show" style="color:black; text-decoration: none">{{name}}</a></td>
+                            <td class="table-number">{{tankage}}</td>
+                            <td class="table-number">{{currentQuantity}}</td>
+                            {{#ifEquals type 0}}
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled></td>
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled></td>
+                            {{else ifEquals type 1}}
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled checked></td>
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled></td>
+                            {{else ifEquals type 2}}
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled></td>
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled checked></td>
+                            {{else}}
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled checked></td>
+                            <td class="table-checkbox"><input class="custom-check-box" type="checkbox" disabled checked></td>
+                            {{/ifEquals}}
+                            <td class="table-button">
+                                <a href="/admin/address/{{_id}}/edit" style="color:#1C658C"><span class="fa-solid fa-pen"></span></a>
+                                <a href="/admin/address/{{_id}}/delete?_method=DELETE" style="color:#1C658C"
+                                    onclick="return confirm('Are you sure you want to delete this record?')">
+                                    <span class="fa-solid fa-trash-can"></span>
+                                </a>
+                            </td>
+                        </tr>
+                    {{/each}}
+                </tbody>
+            </table>
     </div>
     <div class="page-container">
         <button class="first-page" disabled>
