admin - list manager histories

--- a/CoCo/views/admin/addresses/list-addresses-page.hbs
+++ b/CoCo/views/admin/addresses/list-addresses-page.hbs
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div id="list-addresses-table" class="table-responsive" style="height: 360px; width: 80%; margin: auto;">
-            <table>
+            <table class="custom-table table table-striped">
                 <thead>
                     <th class="th-style">STT</th>
                     <th class="th-style">Tên địa điểm</th>
