--- a/CoCo/views/admin/managers/list-manager-page.hbs
+++ b/CoCo/views/admin/managers/list-manager-page.hbs
@@ -65,7 +65,8 @@
             <i class="fas fa-angle-double-right"></i>
             </button>
         </div>
-        <div class="button-add" onclick="window.location.href='./add-manager-page.html'">
+        <a href="/admin/manager/add">
+        <div class="button-add">
             <i class="fa-solid fa-plus fa-3x"></i>
         </div>
 </div>
