change navigate address

--- a/CoCo/views/admin/addresses/add-address-page.hbs
+++ b/CoCo/views/admin/addresses/add-address-page.hbs
@@ -6,7 +6,7 @@
 <div class="container">
     <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/admin/addresses/list-addresses-page">Địa điểm cách ly, điều trị</a></li>
+            <li class="breadcrumb-item"><a href="/admin/address">Địa điểm cách ly, điều trị</a></li>
             <li class="breadcrumb-item active" aria-current="page">Thêm địa điểm cách ly, điều trị</li>
         </ol>
         </nav>
