--- a/CoCo/views/partials/navbar.hbs
+++ b/CoCo/views/partials/navbar.hbs
@@ -47,9 +47,9 @@
                             ĐỊA ĐIỂM
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">XEM DANH
+                            <li><a class="dropdown-item" href="/admin/address">XEM DANH
                                     SÁCH</a></li>
-                            <li><a class="dropdown-item" href="#">THÊM ĐỊA
+                            <li><a class="dropdown-item" href="/admin/address/add">THÊM ĐỊA
                                     ĐIỂM</a>
                             </li>
                         </ul>
