--- a/CoCo/views/admin/addresses/address-detail-page.hbs
+++ b/CoCo/views/admin/addresses/address-detail-page.hbs
@@ -7,9 +7,11 @@
     <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;"
         aria-label="breadcrumb" class="nav-breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/admin/addresses/list-addresses-page">Địa điểm cách ly, điều trị</a>
+            <li class="breadcrumb-item"><a href="/admin/address">Địa điểm cách ly, điều trị</a>
             </li>
-            <li class="breadcrumb-item active" aria-current="page">Bệnh viện dã chiến số 1</li>
+            {{#with address}}
+            <li class="breadcrumb-item active" aria-current="page">{{name}}</li>
+            {{/with}}
         </ol>
     </nav>
     <div class="content-min">
@@ -126,15 +128,15 @@
                     <div class="avatar">
                         <img class="img-thumbnail" src="/images/admin/hospital.jpg" alt="avatar">
                     </div>
-                    <div id="name">Bệnh viện dã chiến số 1</div>
                     {{#with address}}
+                    <div id="name">{{name}}</div>
                     <div class="button">
                         <button type="button" class="custom-btn2 btn text-white btn-sm"
                             onclick="window.location.href='/admin/address/{{_id}}/edit'">Chỉnh sửa địa điểm</button>
                     </div>
                     <div class="button">
                         <button type="button" class="exit-btn btn text-white btn-sm"
-                            onclick="window.location.href='/admin/address/{{_id}}/delete?_method=DELETE'">Xóa địa điểm</button>
+                            onclick="if (confirm('Are you sure you want to delete this address?')) window.location.href='/admin/address/{{_id}}/delete?_method=DELETE'">Xóa địa điểm</button>
                     </div>
                     {{/with}}
                 </div>
