--- a/CoCo/views/index.hbs
+++ b/CoCo/views/index.hbs
@@ -2,7 +2,7 @@
     <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 
     <div class="login-form py-5 px-5">
-        <form>
+        <form action="/" method="post">
             <div class="form-floating mb-3">
                 <input class="form-control border-2 border-dark" id="floatingInput" placeholder="0123456789">
                 <label for="floatingInput">Số CMND/CCCD</label>
