--- a/CoCo/views/manager/products/product-detail-page.hbs
+++ b/CoCo/views/manager/products/product-detail-page.hbs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/manager/products/product-detail-page.css" />
+<link rel="stylesheet" href="/css/manager/products/product-style.css" />
 <div class="content">
   <div class="path">
     <a href="../index.html">Trang chủ > </a>
